--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,26 @@ p {
     background-color: var(--color-white);
 }
 
+.card-4 {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    color: var(--color-white);
+    background-color: var(--color-dark-blue);
+}
+
+.card-5 {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    color: var(--color-black);
+    background-color: var(--color-white);
+}
+
 .card-author {
     display: flex;
     align-items: center;
